# dgrid

./: .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc.js  AGENTS.md  CHANGES.md  CLAUDE.md  LICENSE  RATE-LIMIT-MYSTERY.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-runner.md  type-checker.md
.claude/rules/: api-design.md  e2e-testing.md  testing.md  typescript.md
.github/workflows/: linux-e2e.yml  release.yml  verify.yml
docs/: homebrew-cask.rb.template  homebrew-formula.rb.template
plans/: ENABLE-TAURI-WEBDRIVER-E2E.md  KEYRING-TESTING.md  PHASE2-DETAILED.md  PHASE2-PROGRESS.md  PHASE3-DETAILED.md  PHASE3-PROGRESS.md  PLAN.md  tauri-rewrite.md
scripts/: build-sea.ts  bundle.ts  copy-native.ts  release.ts  run-tauri-e2e.mjs  smoke-test-bundle.sh  sync-version.ts
src/: App.svelte  global.d.ts  index.html  tsconfig.json  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bson_ser.rs  config.rs  credentials.rs  csv.rs  error.rs  executor.rs  file_validation.rs  keyring.rs  lib.rs  main.rs  pool.rs  state.rs  storage.rs  updater.rs
src-tauri/src/commands/: connections.rs  databases.rs  documents.rs  export.rs  files.rs  mod.rs  query.rs  version.rs
src/__tests__/: api-client.test.ts  app-store.test.ts  edit-preview.test.ts  export-store.test.ts  format.test.ts  grid-utils.test.ts  (+11 more)
tests/: setup.ts
(+232 files in other folders)
