[package]
name = "dgrid"
version = "0.6.0"
edition = "2021"

[lib]
name = "dgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
mongodb = "3"
dirs = "6"
futures-util = "0.3"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["rt"] }
indexmap = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
regex-lite = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
